# 3d-sort

./: README.md
cv_msg/: CMakeLists.txt  package.xml
cv_msg/msg/: BoundingBox.msg  ObjectsStates.msg
cv_msg/src/: package.xml
detect_engine/: CMakeLists.txt  package.xml
detect_engine/include/: config.h  model.h  types.h  yolov8_det.h
detect_engine/src/: DetectNode.cpp  model.cpp  postprocess.cpp  postprocess.cu  yolov8_det.cpp
sort/: CMakeLists.txt  package.xml
sort/include/: Hungarian.h  Sort.h  SortNode.h  SortRect.h  Tracker.h
sort/include/lib/mathlib/math/: Limits.hpp
sort/include/lib/matrix/: Vector2.hpp
sort/src/: Hungarian.cpp  Sort.cpp  SortNode.cpp  SortRect.cpp  Tracker.cpp  TrackerState.cpp
